generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGuiSelectionBasicStorage.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiSelectionBasicStorage where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void ApplyRequests(ImGuiSelectionBasicStorage* self, ImGuiMultiSelectIO* ms_io)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_ApplyRequests"
  imGuiSelectionBasicStorage_ApplyRequests :: (Ptr ImGuiSelectionBasicStorage) -> (Ptr ImGuiMultiSelectIO) -> IO ()
-- C: void Clear(ImGuiSelectionBasicStorage* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_Clear"
  imGuiSelectionBasicStorage_Clear :: (Ptr ImGuiSelectionBasicStorage) -> IO ()
-- C: bool Contains(const ImGuiSelectionBasicStorage* self, ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_Contains"
  imGuiSelectionBasicStorage_Contains :: (Ptr ImGuiSelectionBasicStorage) -> ImGuiID -> IO CBool
-- C: bool GetNextSelectedItem(ImGuiSelectionBasicStorage* self, void** opaque_it, ImGuiID* out_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_GetNextSelectedItem"
  imGuiSelectionBasicStorage_GetNextSelectedItem :: (Ptr ImGuiSelectionBasicStorage) -> (Ptr (Ptr ())) -> (Ptr ImGuiID) -> IO CBool
-- C: ImGuiID GetStorageIdFromIndex(ImGuiSelectionBasicStorage* self, int idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_GetStorageIdFromIndex"
  imGuiSelectionBasicStorage_GetStorageIdFromIndex :: (Ptr ImGuiSelectionBasicStorage) -> CInt -> IO ImGuiID
-- C: void SetItemSelected(ImGuiSelectionBasicStorage* self, ImGuiID id, bool selected)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_SetItemSelected"
  imGuiSelectionBasicStorage_SetItemSelected :: (Ptr ImGuiSelectionBasicStorage) -> ImGuiID -> CBool -> IO ()
-- C: void Swap(ImGuiSelectionBasicStorage* self, ImGuiSelectionBasicStorage* r)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiSelectionBasicStorage_Swap"
  imGuiSelectionBasicStorage_Swap :: (Ptr ImGuiSelectionBasicStorage) -> (Ptr ImGuiSelectionBasicStorage) -> IO ()
